--- a/index.html
+++ b/index.html
@@ -75,10 +75,27 @@
                 <img class="contact-info__avatar" src="assets/avatar.jpg" alt="Avatar" />
               </div>
               <div class="contact-info__block"></div>
+
+              
             </div>
           </div>
         </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="skills">
+              <h3 class="skills__header">Skills</h3>
+              <p class="skills__text">Programming Languages: Python, MATLAB</p>
+              <p class="skills__text">Web Development: HTML, CSS, JavaScript, NodeJS</p>
+              <p class="skills__text">Strong analytical and problem-solving skills, quick learning, responsibility and flexibility</p>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </main>
+
+
   </body>
 </html>
