--- a/index.html
+++ b/index.html
@@ -92,6 +92,38 @@
           </div>
         </div>
 
+        <div class="container">
+          <div class="resume__block">
+            <div class="main-info fh">
+              <div class="experiences">
+
+                <h3 class="experiences__header">Experience</h3>
+                <p class="experiences__company-project-name">Web Development Projects</p>
+                <p class="experiences__company-project-name">#1 City Travel Page</p>
+                <p class="experiences__company-project-responsibilities">Description: I designed and developed a city travel webpage to showcase popular tourist attractions, local cuisine, and cultural highlights. This project allowed me to apply my skills in HTML, CSS, and JavaScript, focusing on creating a user-friendly interface and responsive design.</p>
+                <p class="experiences__company-project-responsibilities"> Technologies Used: HTML, CSS, JavaScript</p>
+
+                <p class="experiences__company-project-name">#2 Personal Portfolio</p>
+                <p class="experiences__company-project-responsibilities">Description: To present my skills and projects, I created a personal portfolio website. This project involved developing a visually appealing layout, integrating interactive elements, and ensuring the site was accessible and performant across different devices.</p>
+                <p class="experiences__company-project-responsibilities"> Technologies Used: HTML, CSS, JavaScript</p>
+
+                <p class="experiences__company-project-name">#3 Web Chat Application</p>
+                <p class="experiences__company-project-responsibilities">Description: Using Node.js, I built a web-based chat application that supports real-time communication between users. This project helped me understand server-side programming, WebSocket communication, and the basics of backend development.</p>
+                <p class="experiences__company-project-responsibilities"> Technologies Used: Node.js, HTML, CSS, JavaScript</p>
+
+                <p class="experiences__company-project-name">Academic Projects</p>
+                <p class="experiences__company-project-name">OOP Project Using Python</p>
+                <p class="experiences__company-project-responsibilities">Description: During my studies, I completed an object-oriented programming (OOP) project using Python. This project involved designing and implementing a system that utilized OOP principles such as inheritance, polymorphism, and encapsulation. It enhanced my understanding of software design patterns and the importance of modular, reusable code.</p>
+                <p class="experiences__company-project-responsibilities">Technologies Used: Python</p>
+
+              </div>
+
+
+              <div class="additional-info fv"></div>
+            </div>
+          </div>
+        </div>
+
 
       </div>
     </main>
