Updeted the structure of Experience block

--- a/index.html
+++ b/index.html
@@ -97,26 +97,57 @@
             <div class="main-info fh">
               <div class="experiences">
 
+
                 <h3 class="experiences__header">Experience</h3>
-                <p class="experiences__company-project-name">Web Development Projects</p>
-                <p class="experiences__company-project-name">#1 City Travel Page</p>
-                <p class="experiences__company-project-responsibilities">Description: I designed and developed a city travel webpage to showcase popular tourist attractions, local cuisine, and cultural highlights. This project allowed me to apply my skills in HTML, CSS, and JavaScript, focusing on creating a user-friendly interface and responsive design.</p>
-                <p class="experiences__company-project-responsibilities"> Technologies Used: HTML, CSS, JavaScript</p>
+                    <div class="experiences__company-project">
+                      <h2 class="experiences__company-project-name">Web Development Projects</h2>
 
-                <p class="experiences__company-project-name">#2 Personal Portfolio</p>
-                <p class="experiences__company-project-responsibilities">Description: To present my skills and projects, I created a personal portfolio website. This project involved developing a visually appealing layout, integrating interactive elements, and ensuring the site was accessible and performant across different devices.</p>
-                <p class="experiences__company-project-responsibilities"> Technologies Used: HTML, CSS, JavaScript</p>
+                      <h3 class="experiences__company-project-name">City Travel Page</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Description: I designed and developed a city travel webpage to showcase popular tourist attractions, local cuisine, and cultural highlights. This project allowed me to apply my skills in HTML, CSS, and JavaScript, focusing on creating a user-friendly interface and responsive design.</li>
+                        <li>Technologies Used: HTML, CSS, JavaScript</li>
+                      </ul>
 
-                <p class="experiences__company-project-name">#3 Web Chat Application</p>
-                <p class="experiences__company-project-responsibilities">Description: Using Node.js, I built a web-based chat application that supports real-time communication between users. This project helped me understand server-side programming, WebSocket communication, and the basics of backend development.</p>
-                <p class="experiences__company-project-responsibilities"> Technologies Used: Node.js, HTML, CSS, JavaScript</p>
+                      <h3 class="experiences__company-project-name">Personal Portfolio</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Description: To present my skills and projects, I created a personal portfolio website. This project involved developing a visually appealing layout, integrating interactive elements, and ensuring the site was accessible and performant across different devices.</li>
+                        <li>Technologies Used: HTML, CSS, JavaScript</li>
+                      </ul>
 
-                <p class="experiences__company-project-name">Academic Projects</p>
-                <p class="experiences__company-project-name">OOP Project Using Python</p>
-                <p class="experiences__company-project-responsibilities">Description: During my studies, I completed an object-oriented programming (OOP) project using Python. This project involved designing and implementing a system that utilized OOP principles such as inheritance, polymorphism, and encapsulation. It enhanced my understanding of software design patterns and the importance of modular, reusable code.</p>
-                <p class="experiences__company-project-responsibilities">Technologies Used: Python</p>
+                      <h3 class="experiences__company-project-name">Web Chat Application</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Description: Using Node.js, I built a web-based chat application that supports real-time communication between users. This project helped me understand server-side programming, WebSocket communication, and the basics of backend development.</li>
+                        <li>Technologies Used: Node.js, HTML, CSS, JavaScript</li>
+                      </ul>
 
+                      <h2 class="experiences__company-project-name">Academic Projects</h2>
+
+                      <h3 class="experiences__company-project-name">OOP Project Using Python</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Description: During my studies, I completed an object-oriented programming (OOP) project using Python. This project involved designing and implementing a system that utilized OOP principles such as inheritance, polymorphism, and encapsulation. It enhanced my understanding of software design patterns and the importance of modular, reusable code.</li>
+                        <li>Technologies Used: Python</li>
+                      </ul>
+
+
+
+                    </div>
               </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
               <div class="additional-info fv"></div>
