--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <div class="container">
           <div class="resume__block">
             <div class="main-info fh">
+
               <div class="experiences">
 
 
@@ -133,24 +134,32 @@
                     </div>
               </div>
 
+              <div class="additional-info fv">
+                <div class="additional-info__education">
+                  <h3 class="additional-info__education-header">Education</h3>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability"> 2023-2027 </span>
+                    <h3 class="additional-info__education-university-speciality">Computer science</h3>
+                    <p class="additional-info__education-university-name">University of Aberdeen</p>
+                  </div>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability"> 2020-2023 </span>
+                    <h3 class="additional-info__education-university-speciality">English philology</h3>
+                    <p class="additional-info__education-university-name">National Aviation Umiversity</p>
+                  </div>
+                </div>
+
+                <div class="additional-info__languages">
+                  <h3 class="additional-info__languages-header">Languages</h3>
+                  <p class="additional-info__languages-item">Ukrainian - Native</p>
+                  <p class="additional-info__languages-item">English - C1</p>
+                  <p class="additional-info__languages-item">German - B1</p>
+                </div>
+              </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-              <div class="additional-info fv"></div>
             </div>
           </div>
         </div>
