--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
   </head>
   <body>
+
+    <div class="theme-toggle">
+    <label class="switch">
+      <input type="checkbox" id="theme-switch">
+      <span class="slider round"></span>
+      <span class="icon sun"><i class="fas fa-sun"></i></span>
+      <span class="icon moon"><i class="fas fa-moon"></i></span>
+    </label>
+  </div>
+
     <main>
       <div class="resume">
         <div class="container">
@@ -168,6 +179,16 @@
 
       </div>
     </main>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', (event) => {
+        const themeSwitch = document.getElementById('theme-switch');
+
+        themeSwitch.addEventListener('change', () => {
+          document.body.classList.toggle('dark-mode', themeSwitch.checked);
+        });
+      });
+    </script>
 
 
   </body>
